Name:           halon
Version:        0.1
Stability:      experimental
Synopsis:       High Availability system.
Description:    The High Availability system is a library that can be used
                together with deployment-specific components to ensure the
                high availability of a distributed application.
Homepage:       https://github.com/tweag/halon
License:        Apache-2.0
Copyright:      (C) 2013 Seagate Technology LLC and/or its Affiliates
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       halon/

Flag debug
  Description: Enable tracing output so errors are logged.
  Default: False

Flag rpc
  Description: Build tests with the RPC backend instead of TCP.
  Default: False

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

Library
  Hs-Source-Dirs:  src/lib
  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                      DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      NamedFieldPuns
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TupleSections

  Ghc-Options:  -Wall -Werror

  Exposed-Modules: HA.Resources
                   HA.Debug
                   HA.Encode
                   HA.EventQueue
                   HA.EventQueue.Process
                   HA.EventQueue.Producer
                   HA.EventQueue.Types
                   HA.EQTracker
                   HA.EQTracker.Process
                   HA.ResourceGraph
                   HA.ResourceGraph.GraphLike
                   HA.ResourceGraph.UGraph
                   HA.Resources.TH
                   HA.Multimap
                   HA.Multimap.Implementation
                   HA.Multimap.Process
                   HA.Replicator
                   HA.Replicator.Log
                   HA.Replicator.Mock
                   HA.RecoverySupervisor
                   HA.Storage
                   HA.NodeUp
                   HA.Network.RemoteTables
                   HA.Network.Socket
                   HA.Service
                   HA.Service.Interface
                   HA.Service.TH
                   HA.Services.Dummy
                   HA.Services.Ekg
                   HA.Services.Ekg.Types
                   HA.Services.Noisy
                   HA.Services.Ping
                   HA.Startup
                   HA.Logger
                   Control.SpineSeq
                   System.Posix.SysInfo
                   System.SystemD.API
  other-modules:   HA.CallTimeout
                   HA.Service.Internal
                   HA.EQTracker.Internal

  Build-Depends:   base,
                   binary >= 0.6,
                   bytestring,
                   bytestring-trie,
                   cereal,
                   consensus,
                   consensus-paxos,
                   containers,
                   constraints >= 0.4,
                   ekg,
                   ekg-core,
                   filepath >= 1.3,
                   free,
                   lens,
                   network,
                   distributed-commands >= 0.1,
                   distributed-process-scheduler,
                   distributed-static,
                   hashable,
                   directory,
                   exceptions,
                   ghc-prim,
                   mtl >= 2.0,
                   process >= 1.1,
                   rank1dynamic,
                   replicated-log,
                   halon-instances,
                   singletons,
                   stm,
                   text,
                   unordered-containers,
                   network-transport,
                   options-schema >= 0.1.1.0,
                   cep,
                   template-haskell,
                   hostname,
                   uuid,
                   parsec

  if flag(rpc)
    Build-Depends: rpclite,
                   network-transport,
                   network-transport-rpc >= 0.0.1
  else
    Build-Depends: network-transport-tcp

Benchmark sync-rg
  Type:             exitcode-stdio-1.0
  Main-Is:          sync-rg.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   benchmarks

  Buildable:        False

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    base >= 4.5,
                    Cabal >= 1.16,
                    criterion,
                    binary >= 0.6.4,
                    bytestring,
                    deepseq,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    directory,
                    filepath,
                    hashable,
                    network,
                    network-transport,
                    network-transport-controlled,
                    process >= 1.2,
                    replicated-log,
                    unordered-containers,
                    options-schema >= 0.1.1.0,
                    random,
                    tasty >= 0.8,
                    tasty-files,
                    tasty-hunit,
                    cep,
                    uuid,
                    containers,
                    stm
  Build-Depends:    network-transport-tcp >= 0.3,
                    network-transport-inmemory >= 0.5

Benchmark gc-rg
  Type:             exitcode-stdio-1.0
  Main-Is:          gc-rg.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   benchmarks

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    base >= 4.5,
                    Cabal >= 1.16,
                    criterion,
                    binary >= 0.6.4,
                    bytestring,
                    deepseq,
                    directory,
                    filepath,
                    hashable,
                    unordered-containers,
                    options-schema >= 0.1.1.0,
                    random,
                    containers

Test-Suite tests
  Type:             exitcode-stdio-1.0
  Main-Is:          tests.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    Control.SpineSeq.Tests
                    HA.Autoboot.Tests
                    HA.EventQueue.Tests
                    HA.Multimap.ProcessTests
                    HA.Multimap.Tests
                    HA.NodeAgent.Tests
                    HA.RecoverySupervisor.Tests
                    HA.ResourceGraph.Tests
                    HA.ResourceGraph.Tests.Merge
                    HA.Storage.Tests
                    RemoteTables
                    Test.Helpers
                    Test.Run
                    Test.Transport

  Ghc-Options: -threaded -Wall -Werror

  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    base >= 4.5,
                    binary >= 0.6.4,
                    bytestring,
                    constraints,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    directory,
                    exceptions,
                    filepath,
                    hashable,
                    halon-instances,
                    mtl,
                    network,
                    network-transport,
                    network-transport-controlled,
                    process >= 1.2,
                    replicated-log,
                    unordered-containers,
                    options-schema >= 0.1.1.0,
                    random,
                    tasty >= 0.8,
                    tasty-files,
                    tasty-hunit,
                    tasty-quickcheck,
                    cep,
                    uuid,
                    containers,
                    stm,
                    QuickCheck
  if flag(rpc)
      Build-Depends: network-transport-rpc
      CPP-Options:    -DUSE_RPC
  else
      Build-Depends: network-transport-tcp >= 0.3,
                     network-transport-inmemory >= 0.5

Test-Suite scheduler-tests
  Type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Main-Is:          scheduler-tests.hs
  Other-Modules:    HA.Autoboot.Tests
                    HA.RecoverySupervisor.Tests
                    RemoteTables
                    Test.Run
                    Test.Transport

  Ghc-Options: -threaded -Wall -Werror

  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    base >= 4.5,
                    binary >= 0.6.4,
                    bytestring,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    directory,
                    exceptions,
                    filepath,
                    hashable,
                    halon-instances,
                    network,
                    network-transport,
                    network-transport-controlled,
                    mtl >= 2.0,
                    unordered-containers,
                    options-schema >= 0.1.1.0,
                    process >= 1.2,
                    random,
                    replicated-log,
                    tasty >= 0.8,
                    tasty-files,
                    tasty-hunit,
                    cep,
                    uuid,
                    containers,
                    stm,
                    unix
  if flag(rpc)
      Build-Depends: network-transport-rpc
      CPP-Options:    -DUSE_RPC
  else
      Build-Depends: network-transport-tcp >= 0.3,
                     network-transport-inmemory >= 0.3
