Name:           mero-halon
Version:        0.1
Stability:      experimental
Synopsis:       Mero interface to HA
Description:    The High Availability system is a library that can be used
                together with deployment-specific components to ensure the
                high availability of a distributed application.
Homepage:       https://github.com/tweag/halon
License:        AllRightsReserved
Copyright:      (C) 2013 Xyratex Technology Limited
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       mero-halon/

Flag debug
  Description: Enable tracing output so errors are logged.
  Default: False

Flag distributed-tests
  Description: Enables distributed tests.
  Default: False

Flag rpc
  Description: Build with the RPC backend instead of TCP.
  Default: False

Flag mero
  Description: Build using the real rather than fake Mero.
  Default: False

Flag eventqueue-tests
  Description: Enables distributed tests.
  Default: False

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

Flag long-tests
  Description: Enable very long tests
  Default: False

Library
  Hs-Source-Dirs:  src/lib
  Default-Language: Haskell2010
  if flag(rpc)
    CPP-Options:    -DUSE_RPC
  if flag(mero)
    CPP-Options:    -DUSE_MERO
  Default-Extensions: BangPatterns
                      DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      NamedFieldPuns
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TupleSections

  Ghc-Options:  -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Exposed-Modules: Mero.FakeEpoch
                   Mero.Messages
                   Mero.RemoteTables
                   HA.Network.Transport
                   HA.Services.DecisionLog
                   HA.Services.Frontier
                   HA.Services.Monitor
                   HA.Services.SSPL
                   HA.Services.SSPLHL
                   HA.RecoveryCoordinator.Mero
                   HA.RecoveryCoordinator.CEP
                   HA.RecoveryCoordinator.Definitions
                   HA.RecoveryCoordinator.Rules.Castor
                   HA.Resources.Castor
                   HA.Resources.Castor.Initial

  Other-Modules:   HA.RecoveryCoordinator.Actions.Core
                   HA.RecoveryCoordinator.Actions.Hardware
                   HA.RecoveryCoordinator.Actions.Service
                   HA.Services.DecisionLog.CEP
                   HA.Services.DecisionLog.Types
                   HA.Services.Frontier.Command
                   HA.Services.Monitor.CEP
                   HA.Services.Monitor.Types
                   HA.Services.SSPL.CEP
                   HA.Services.SSPL.Rabbit
                   HA.Services.SSPL.LL.Resources
                   HA.Services.SSPL.HL.Resources
                   HA.Services.SSPL.HL.StatusHandler

  Build-Depends:   base,
                   aeson,
                   amqp,
                   halon,
                   bytestring,
                   containers,
                   directory,
                   distributed-process-scheduler,
                   distributed-static,
                   hashable,
                   mtl,
                   options-schema,
                   process,
                   regex-tdfa,
                   scientific,
                   sspl,
                   text,
                   time,
                   binary,
                   network >= 2.4,
                   network-transport,
                   unordered-containers,
                   cep,
                   netwire,
                   uuid,
                   random,
                   yaml,
                   hostname,
                   multimap

  if flag(mero)
      Exposed-Modules: Mero.Epoch
                       Mero.M0Worker
                       Mero.Notification
                       Mero.Notification.HAState
                       HA.RecoveryCoordinator.Actions.Mero
                       HA.RecoveryCoordinator.Rules.Mero
                       HA.Resources.Mero
                       HA.Resources.Mero.Note
                       HA.Services.Mero
      Other-Modules: HA.Services.Mero.CEP
                     HA.Services.Mero.Types
      cc-options: -Wno-attributes -Werror -g -DM0_INTERNAL= -DM0_EXTERN=extern
      c-sources: hastate/hastate.c
                 hastate/hastate_fops.c
                 hastate/hastate_foms.c
      include-dirs: hastate
      extra-libraries: mero
      Build-Depends: rpclite,
                     confc,
                     inline-c
  if flag(rpc)
      Build-Depends: rpclite,
                     network-transport-rpc
  else
      Build-Depends: network >= 2.4,
                     network-transport-tcp >= 0.3

Executable halonctl
  Hs-Source-Dirs:     src/halonctl
  Main-Is:            Main.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror


  if flag(debug)
    ghc-options:      -eventlog -debug -with-rtsopts=-l-au
  default-language:   Haskell2010
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      DisambiguateRecordFields
                      OverloadedStrings
                      ScopedTypeVariables
                      TupleSections
                      StandaloneDeriving
  Other-Extensions:   CPP
  if flag(mero)
    CPP-Options:    -DUSE_MERO
  if flag(rpc)
      CPP-Options:    -DUSE_RPC
  Build-Depends:      halon,
                      mero-halon,
                      aeson,
                      base >= 4.5,
                      binary,
                      bytestring,
                      distributed-process-scheduler,
                      distributed-static,
                      filepath >= 1.3,
                      hashable,
                      network-transport >= 0.3,
                      options-schema >= 0.2,
                      optparse-applicative >= 0.11,
                      process,
                      yaml
  if flag(rpc)
      Build-Depends: network-transport-rpc >= 0.0.1
  else
      Build-Depends: network >= 2.4,
                     network-transport-tcp >= 0.3

Executable halond
  Hs-Source-Dirs:     src/halond
  Main-Is:            Main.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(debug)
    ghc-options:      -eventlog -debug -with-rtsopts=-l-au -rtsopts
  default-language:   Haskell2010
  Default-Extensions: DeriveDataTypeable
                      DisambiguateRecordFields
                      OverloadedStrings
                      ScopedTypeVariables
                      TupleSections
                      StandaloneDeriving
  Other-Extensions:   CPP
  if flag(mero)
    CPP-Options:    -DUSE_MERO
  if flag(rpc)
      CPP-Options:    -DUSE_RPC
  Build-Depends:      halon,
                      binary,
                      mero-halon,
                      base >= 4.5,
                      distributed-commands,
                      distributed-process-scheduler,
                      distributed-static,
                      filepath >= 1.3,
                      network-transport >= 0.3,
                      options-schema
  if flag(mero)
      Build-Depends: rpclite
  if flag(rpc)
      Build-Depends: network-transport-rpc >= 0.0.1
  else
      Build-Depends: network >= 2.4,
                     network-transport-tcp >= 0.3.1

Test-Suite startService
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         startService.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite autoboot
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         autoboot.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process
  if !flag(distributed-tests)
    Buildable:     False


Test-Suite rcInsists
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         rcInsists.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite rcInsists2
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         rcInsists2.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite tsDisconnects
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         tsDisconnects.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   replicated-log
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite tsDisconnects2
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         tsDisconnects2.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite tsRecovers
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         tsRecovers.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   replicated-log
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite tsRecovers2
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         tsRecovers2.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite tsTotalIsolation
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         tsTotalIsolation.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   replicated-log
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite tsTotalIsolation2
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         tsTotalIsolation2.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite nodeDeath
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         nodeDeath.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite clusterDeath
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         clusterDeath.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite configureServices
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         configureServices.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process,
                   transformers
  if !flag(distributed-tests)
    Buildable:     False


Test-Suite testsnapshot2
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         snapshots2.hs

  Ghc-Options:     -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process
  if !(flag(distributed-tests) && flag(long-tests))
    Buildable:     False


Test-Suite testsnapshot3
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         snapshots3.hs

  Ghc-Options:     -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   distributed-process-test,
                   process
  if !(flag(distributed-tests))
    Buildable:     False


Test-Suite testepoch
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests
  Main-Is:         testepoch.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

--  if flag(rpc) && flag(mero)
--    Build-Depends:   halon,
--                     mero-halon,
--                     base >= 4.5,
--                     directory,
--                     filepath,
--                     process >= 1.1,
--                     process >= 1.1,
--                     binary >= 0.6.4,
--                     network-transport-rpc,
--                     time >= 1.4
--  else
  buildable: False

Test-Suite testhastate
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests
  Main-Is:         testhastate.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(mero)
    Build-Depends:   halon,
                     confc,
                     mero-halon,
                     base >= 4.5,
                     process >= 1.1,
                     binary >= 0.6.4,
                     bytestring,
                     directory,
                     filepath,
                     rpclite,
                     time >= 1.4
  else
    buildable: False

Test-Suite testeventqueue
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         EventQueue.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   distributed-process-test,
                   process,
                   transformers,
                   halon,
                   bytestring,
                   network,
                   mtl
  if !flag(eventqueue-tests)
    Buildable:     False

-- XXX: Tests are not build under ghc >= 7.8 because currently
-- they fails, these workarounds should be removed as soon as
-- tests will pass

Test-Suite unit-tests
  Type:             exitcode-stdio-1.0
  Main-Is:          test.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    HA.RecoveryCoordinator.Mero.Tests
                    RemoteTables

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(mero)
    CPP-Options:    -DUSE_MERO
    Build-Depends:  confc

  CPP-Options:      -DMC_RG=RLocalGroup -DUSE_MOCK_REPLICATOR
  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    mero-halon,
                    base >= 4.5,
                    Cabal >= 1.16,
                    binary >= 0.6.4,
                    bytestring,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    mtl,
                    network,
                    network-transport,
                    network-transport-controlled,
                    network-transport-inmemory,
                    options-schema,
                    hashable,
                    unordered-containers,
                    random,
                    sspl,
                    tasty,
                    tasty-hunit,
                    tasty-files,
                    cep,
                    attoparsec,
                    containers
  if flag(rpc)
      Build-Depends: network-transport-rpc,
                     directory,
                     filepath,
                     process
      CPP-Options:    -DUSE_RPC
  else
      Build-Depends: network-transport-tcp >= 0.3

Test-Suite integration-tests
  Type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    HA.RecoveryCoordinator.Mero.Tests
                    RemoteTables
  Main-Is:          test.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  CPP-Options:      -DMC_RG=RLogGroup
  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    mero-halon,
                    base >= 4.5,
                    binary >= 0.6.4,
                    bytestring,
                    Cabal >= 1.16,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    mtl,
                    network,
                    network-transport,
                    network-transport-controlled,
                    network-transport-inmemory,
                    options-schema,
                    hashable,
                    unordered-containers,
                    random,
                    sspl,
                    tasty,
                    tasty-hunit,
                    tasty-files,
                    cep,
                    attoparsec,
                    containers
  if flag(rpc)
      Build-Depends: network-transport-rpc,
                     directory,
                     filepath,
                     process
      CPP-Options:    -DUSE_RPC
  else
      Build-Depends: network-transport-tcp >= 0.3

Test-Suite scheduler-tests
  Type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    HA.RecoveryCoordinator.Mero.Tests
                    RemoteTables
  Main-Is:          scheduler-tests.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  CPP-Options:      -DMC_RG=RLogGroup
  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    mero-halon,
                    base >= 4.5,
                    binary >= 0.6.4,
                    bytestring,
                    Cabal >= 1.16,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    mtl,
                    network,
                    network-transport,
                    network-transport-controlled,
                    network-transport-inmemory,
                    options-schema,
                    hashable,
                    unordered-containers,
                    random,
                    sspl,
                    tasty,
                    tasty-hunit,
                    tasty-files,
                    unix,
                    cep,
                    attoparsec,
                    containers

Test-Suite test-start-service-local
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         startService-local.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   directory,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   distributed-process-test,
                   process,
                   unix
  if flag(rpc)
      Build-Depends: network-transport-rpc
      CPP-Options:    -DUSE_RPC

Test-Suite test-stha-local
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         stha-local.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(mero)
    Build-Depends: distributed-process,
                   base,
                   filepath,
                   directory,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   distributed-process-test,
                   process,
                   unix
  else
      Buildable: False
